--- a/templates/partials/view_project_detail.html
+++ b/templates/partials/view_project_detail.html
@@ -7,7 +7,9 @@
         <div class="flex justify-between items-start">
             <div>
                 <h2 id="p-detail-title" class="text-3xl font-bold text-slate-900 dark:text-white">Название проекта</h2>
-                <p id="p-detail-desc" class="text-slate-500 mt-1 dark:text-slate-400">Описание...</p>
+                <p id="p-detail-desc" class="text-slate-500 mt-1 mb-2 dark:text-slate-400">Описание...</p>
+                <!-- Container for Link Button -->
+                <div id="p-detail-link-container"></div>
             </div>
             <div class="flex gap-2">
                 <button id="p-detail-edit-btn" class="p-2 text-slate-400 hover:text-primary-600 dark:hover:text-primary-400"><i data-lucide="edit-2" class="w-5 h-5"></i></button>
